# glaze

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
runner/: aggregate.py  extract_refs.py  metrics.py  modelscope.py  prompts_example.json  video_io.py
src/glaze/: __init__.py  cli.py  glaze.py  video.py
src/glaze/encoders/: __init__.py  base.py  clip_encoder.py  vae_encoder.py
src/glaze/style/: __init__.py  selector.py  transfer.py
